--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "feather-icons-react": "^0.6.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.1"
   },
