--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://euphiess.github.io/aircall",
   "name": "frontend-hiring-challenge",
   "version": "1.0.0",
   "description": "Leap test",
@@ -8,6 +9,8 @@
   "license": "",
   "private": false,
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && webpack-dev-server --mode development --open",
     "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && webpack --mode production"
   },
